# MLOps-Kurs

./: .dockerignore  .gitignore  DATASET_CARD.md  Docker-compose.yml  Dockerfile  MODEL_CARD.md  dataset_preview.csv  pyproject.toml  readme.md
app/: main.py  train.py
app/api/: routes.py
app/inference/: model_loader.py  predictor.py
app/train/: attach.py  preprocess.py  train.py  train_baseline.py
configs/: inference_config.yaml  train_config.yaml
configs/experiments/: baseline_logreg.yaml  baseline_logreg_v2.yaml  modernbert_frozen.yaml  modernbert_frozen_v2.yaml  modernbert_tuned.yaml  modernbert_tuned_v2.yaml
data/preprocessed/: 30k_dataset.csv  30k_dataset_v2_lemma.csv
mlruns/0/: meta.yaml
mlruns/801366673329859678/: meta.yaml
mlruns/801366673329859678/7d37a4743ac04e429b12c43f94159daf/: meta.yaml
mlruns/933960091474243758/: meta.yaml
mlruns/933960091474243758/1e9baf6eaed749468fc93e56cf80bab4/: meta.yaml
mlruns/933960091474243758/28fcd9972e6b4a02ae7b957ff6081868/: meta.yaml
mlruns/933960091474243758/2ed369e8ad85466884a5c31dfb7a5ef9/: meta.yaml
mlruns/933960091474243758/3ce09ecd17a94a06972ab2458a5cc0ca/: meta.yaml
mlruns/933960091474243758/3ed6d617dba4447d8ddbf2d3e03b1efc/: meta.yaml
mlruns/933960091474243758/4a917eb9b0be41289ab48c2ec1e620fb/: meta.yaml
models/: first_test_model.pkl  fourth_test_model.pkl  modelsC.py  second_test_model.pkl  third_test_model.pkl  train1.py  vectorizer.pkl
scripts/: run_all_experiments.sh
src/: main.py  train.py  train2.py
src/api/: routes.py
src/inference/: model_loader.py  predictor.py
(+64 files in other folders)
